--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/stylesheets/style.css">
 </head>
 <body>
 <script src="assets/lib/jquery-3.7.1.min.js"></script>
@@ -44,6 +44,6 @@
             </div>
         </div>
 
-        <script src="script.js"></script>
+        <script src="assets/js/script.js"></script>
 </body>
 </html>
