--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button class="num-pad">1</button>
                 <button class="num-pad">2</button>
                 <button class="num-pad">3</button>
-                <button class="num-pad operator">x</button>
+                <button class="num-pad operator">*</button>
             </div>
             <div>
                 <button class="num-pad">0</button>
